Update tests to not contain deprecated behavior